tests/restrict-github-team-management/external-name-adoption/resources.yaml
---
# Adoption of a pre-existing foreign GitHub team through the Crossplane
# external-name annotation, which bypasses both the object name and the spec
# fields.
apiVersion: team.github.m.upbound.io/v1beta1
kind: Team
metadata:
  name: platform
  namespace: github-config
  annotations:
    crossplane.io/external-name: some-other-team
spec:
  forProvider:
    name: platform
